# src/main/java/br/jus/trf2/siga/ex/api/DocSiglaAnotarPost.java
@@ -16,9 +16,9 @@ import br.gov.jfrj.siga.ex.ExMobil;
 import br.gov.jfrj.siga.ex.ExPapel;
 import br.gov.jfrj.siga.ex.bl.Ex;
 import br.gov.jfrj.siga.persistencia.ExMobilDaoFiltro;
-import br.jus.trf2.siga.ex.api.ISigaDoc.DocSiglaTramitarPostRequest;
-import br.jus.trf2.siga.ex.api.ISigaDoc.DocSiglaTramitarPostResponse;
-import br.jus.trf2.siga.ex.api.ISigaDoc.IDocSiglaTramitarPost;
+import br.jus.trf2.siga.ex.api.ISigaDoc.DocSiglaAnotarPostRequest;
+import br.jus.trf2.siga.ex.api.ISigaDoc.DocSiglaAnotarPostResponse;
+import br.jus.trf2.siga.ex.api.ISigaDoc.IDocSiglaAnotarPost;
 import br.jus.trf2.siga.ex.api.TokenCriarPost.Usuario;
 
 import com.google.gson.Gson;
@@ -28,11 +28,11 @@ import com.google.gson.reflect.TypeToken;
 import com.google.gson.stream.JsonReader;
 import com.google.gson.stream.JsonWriter;
 
-public class DocSiglaTramitarPost implements IDocSiglaTramitarPost {
+public class DocSiglaAnotarPost implements IDocSiglaAnotarPost {
 
 	@Override
-	public void run(DocSiglaTramitarPostRequest req,
-			DocSiglaTramitarPostResponse resp) throws Exception {
+	public void run(DocSiglaAnotarPostRequest req,
+			DocSiglaAnotarPostResponse resp) throws Exception {
 		String authorization = TokenCriarPost.assertAuthorization();
 		Usuario u = TokenCriarPost.assertUsuario();
 
@@ -48,29 +48,12 @@ public class DocSiglaTramitarPost implements IDocSiglaTramitarPost {
 				ExMobil mob = db.consultarPorSigla(flt);
 				ExDocumento doc = mob.doc();
 
-				DpLotacao lot = new DpLotacao();
-				lot.setSigla(req.lotacao);
-				lot = db.consultarPorSigla(lot);
-
-				DpPessoa pes = new DpPessoa();
-				pes.setSigla(req.matricula);
-				pes = db.consultarPorSigla(pes);
-
 				Utils.assertAcesso(mob, titular, lotaTitular);
-
-				if (!Ex.getInstance().getComp()
-						.podeTransferir(titular, lotaTitular, mob))
-					throw new Exception("O documento " + req.sigla
-							+ " não pode ser tramitado por "
-							+ titular.getSiglaCompleta() + "/"
-							+ lotaTitular.getSiglaCompleta());
 
 				Ex.getInstance()
 						.getBL()
-						.transferir(null, null, cadastrante, lotaCadastrante,
-								mob, null, null, null, lot, pes, null, null,
-								null, titular, null, true, null, null, null,
-								false, false);
+						.anotar(cadastrante, lotaCadastrante, mob, null, null,
+								null, null, null, req.anotacao, null);
 				db.commit();
 				resp.status = "OK";
 			} catch (Exception ex) {
@@ -81,7 +64,6 @@ public class DocSiglaTramitarPost implements IDocSiglaTramitarPost {
 
 	@Override
 	public String getContext() {
-		return "tramitar documento";
+		return "Anotar documento";
 	}
-
 }
